--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
     <p class="msg">올해는 꼭 모두 지키자!</p>
     <!-- p는 문단을 나타낸다. -->
     <div class="row flex-row wrap">
+        <div class="bucket img1-t5 center done">웹 페이지 만들기</div>
         <div class="bucket img1-t2 center">게임 데모 버전 만들기</div>
         <!-- div는 박스를 나타낸다. -->
         <div class="bucket img2-t3 center">몸무게 70kg 달성하기</div>
